kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: homework-service
  namespace: homework
  labels:
    app: nginx
spec:
  clusterIP: 10.96.1.1
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: http-web-svc
  type: ClusterIP
